--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,2 +1,15 @@
 
-@import './element.scss';
+@import './sidebar.scss';
+.sidebar-container {
+  transition: width 0.28s;
+  width: $sideBarWidth !important;
+  background-color: $menuBg;
+  height: 100vh;
+  position: fixed;
+  font-size: 0px;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 98;
+  overflow: hidden;
+}
