--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,15 +1,3 @@
+@import url('./variables.scss');
+@import url('./sidebar.scss');
 
-@import './sidebar.scss';
-.sidebar-container {
-  transition: width 0.28s;
-  width: $sideBarWidth !important;
-  background-color: $menuBg;
-  height: 100vh;
-  position: fixed;
-  font-size: 0px;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 98;
-  overflow: hidden;
-}
